# builderbench

./: .gitignore  README.md  pyproject.toml  run.py  submit.py  utils.py
agents/: __init__.py  base.py  client.py  cot.py  naive.py  prompt_buffer.py  reflexion.py
builderbench/: __init__.py  constants.py  create_task_data.py  creative_cube_env.py  creative_cube_language_env.py  env.py  manispace_env.py
builderbench/controllers/: __init__.py
builderbench/descriptions/: floor_wall.xml
builderbench/lie/: __init__.py  se3.py  so3.py
doc/: audit_apr26_cka_correctness.md  batch_experiments.md  bug_fix_jax_tree_map.md  bug_fix_obs_padding.md  fix_apr26_cka_a_b.md  hpc_commands.md  implementation_plan.md  implementation_tracking.md
rl/: .gitignore  pyproject.toml
rl/builderbench/: build_block.py  env_utils.py
rl/impls/: continual_crl.py  draft_4.sh  experiment_configs.py  knowledge_pool.py  rl_metrics.py
rl/impls/utils/: pad_wrapper.py  wrapper.py
rl/impls/wandb/: latest-run
rl/impls/wandb/offline-run-20260421_184606-zdhjjjrt/: run-zdhjjjrt.wandb
rl/impls/wandb/offline-run-20260421_185215-g5kh8fve/: run-g5kh8fve.wandb
rl/impls/wandb/offline-run-20260421_185923-9cqi1m5u/: run-9cqi1m5u.wandb
rl/impls/wandb/offline-run-20260421_185923-9cqi1m5u/files/: requirements.txt
scripts/: all_tasks.txt  run_claude_opus4.6.sh  run_gemini_flash3.1.sh  run_openai_gpt5.2.sh  submit_claude_opus4.6.sh  submit_gemini_flash3.1.sh  submit_openai_gpt5.2.sh
teleop/: README.md  teleop_gui.py  teleop_keyboard.py
(+1 files in other folders)
